ajustes de la pagina principal y pie de pagina

--- a/seguroUiversitario/src/app/main/main.component.html
+++ b/seguroUiversitario/src/app/main/main.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <h3 class="title"><b><u style="font-size: 1.5em; color: rgb(53, 52, 52);">ULTIMAS NOVEDADES Y CONSULTAS EXTERNAS</u></b></h3>
-            <p style="color: navy;"><b>Estimado usuario, le comunicamos que los enlaces para los diferentes servicios se encuentran <u style="color: crimson;">A CONTINUACIÓN</u></b></p>
+            <p style="color: navy; float: left;"><b>Estimado usuario, le comunicamos que los enlaces para los diferentes servicios se encuentran <u style="color: crimson;">A CONTINUACIÓN</u></b></p>
         </div>
         <div class="slider">
             <div class="slide-track">
