--- a/seguroUiversitario/src/app/app.component.html
+++ b/seguroUiversitario/src/app/app.component.html
@@ -1,6 +1,7 @@
 <body>
     <app-header></app-header>
     <app-main></app-main>
+    <app-footer></app-footer>
     <router-outlet />    
 </body>
 
