--- a/seguroUiversitario/src/app/header/header.component.html
+++ b/seguroUiversitario/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <ul class="header-links">
                 <li>
                     <a href="https://ssupotosi.com.bo/tel:%2026224161">
-                        <i class="fa-solid fa-phone-flip"></i>Emergencias +591-2-6224161
+                        <img src="./phone-flip-solid.svg" alt=""> Emergencias +591-2-6224161
                     </a>  
                 </li>
                 <li>
