--- a/seguroUiversitario/src/app/main/main.component.html
+++ b/seguroUiversitario/src/app/main/main.component.html
@@ -57,6 +57,57 @@
                         <a href="https://ssupotosi.com.bo/informes/solvencias/solvencia.pdf"><h3><b><u>SOLVENCIAS</u><br>PARA<br>AFILIACIONES</b></h3>></a>
                     </div>
                 </div>
+                <div class="slide" style="background-image: url('https://ssupotosi.com.bo/img/logo.png')">
+                    <div class="slide-font">
+                        <a href="http://fichaje.ssupotosi.com.bo/ssup_fichaje"><h3><b><u>INGRESO A</u><br>FICHAJE<br>EN LINEA</b></h3>></a>
+                    </div>
+                    
+                </div>
+                <div class="slide" style="background-image: url('https://ssupotosi.com.bo/img/Escudo_de_Bolivia.png')">
+                    <div class="slide-font">
+                        <a href="https://ssupotosi.com.bo/informes/solvencias/solvencia.pdf"><h3><b><u>SOLVENCIAS</u><br>PARA<br>AFILIACIONES</b></h3></a>
+                    </div>
+                </div>
+                <div class="slide" style="background-image: url('https://ssupotosi.com.bo/img/Escudo_de_Bolivia.png')">
+                    <div class="slide-font">
+                        <a href="http://covid.ssupotosi.com.bo:8081/ssup_covid19/web"><h3><b><u>CUESTIONARIO</u><br>COVID - 19</b></h3></a>
+                    </div>
+                </div>
+                <div class="slide" style="background-image: url('https://ssupotosi.com.bo/img/Escudo_de_Bolivia.png')">
+                    <div class="slide-font">
+                        <a href="https://view.genial.ly/5f216cb2c43a880d757fafb0/interactive-content-manual-de-fichaje"><h3><b><u>MANUAL</u><br>ATENCIÓN<br>EN LÍNEA</b></h3></a>
+                    </div>
+                </div>
+                <div class="slide" style="background-image: url('https://ssupotosi.com.bo/img/Escudo_de_Bolivia.png');background-size:100%; background-repeat: no-repeat;">
+                    <div class="slide-font">
+                        <a href="https://view.genial.ly/5f34b3a4e648820d82f9a33d/interactive-content-tutorial-de-certificados-de-afiliaciones-y-no-afiliaciones"><h3><b><u>MANUAL</u><br>CERTIFICACIONES<br>EN LÍNEA</b></h3></a>
+                    </div>
+                </div>
+                <div class="slide" style="background-image: url('https://ssupotosi.com.bo/img/Escudo_de_Bolivia.png')">
+                    <div class="slide-font">
+                        <a href="http://certificaciones.ssupotosi.com.bo/verificar"><h3><b><u>MANUAL</u><br>RESERVA<br>DE FICHAS<br>EN LÍNEA</b></h3></a>
+                    </div>
+                </div>
+                <div class="slide" style="background-image: url('https://ssupotosi.com.bo/img/Escudo_de_Bolivia.png')">
+                    <div class="slide-font">
+                        <a href="http://fichaje.ssupotosi.com.bo/ssup_fichaje"><h3><b>INGRESO A<br>FICHAJE<br>EN LÍNEA</b></h3></a>
+                    </div>
+                </div>
+                <div class="slide" style="background-image: url('https://ssupotosi.com.bo/img/Escudo_de_Bolivia.png')">
+                    <div class="slide-font">
+                        <a href="http://certificaciones.ssupotosi.com.bo/persona/verificar"><h3><b><u>CERTIFICADOS</u><br>AFILIACIÓN<br>NO AFILIACIÓN</b></h3></a>
+                    </div>
+                </div>
+                <div class="slide" style="background-image: url('https://ssupotosi.com.bo/img/Escudo_de_Bolivia.png')">
+                    <div class="slide-font">
+                        <a href="http://covid.ssupotosi.com.bo:8081/ssup_covid19/web"><h3><b><u>CUESTIONARIO</u><br>COVID - 19</b></h3></a>
+                    </div>
+                </div>
+                <div class="slide" style="background-image: url('https://ssupotosi.com.bo/img/Escudo_de_Bolivia.png')">
+                    <div class="slide-font">
+                        <a href="https://ssupotosi.com.bo/informes/solvencias/solvencia.pdf"><h3><b><u>SOLVENCIAS</u><br>PARA<br>AFILIACIONES</b></h3>></a>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="about" class="section wow fadeIn">
@@ -76,6 +127,27 @@
                 <div class="slider-img">
                     <div class="img-silder">
                         <div class="img-slide-track">
+                            <div class="img-slide">
+                                <img src="https://ssupotosi.com.bo/images/laboratorio.jpg" alt="">
+                            </div>
+                            <div class="img-slide">
+                                <img src="https://ssupotosi.com.bo/images/farmacia.jpg" alt="">
+                            </div>
+                            <div class="img-slide">
+                                <img src="https://ssupotosi.com.bo/images/ambulancia.png" alt="">
+                            </div>
+                            <div class="img-slide">
+                                <img src="https://ssupotosi.com.bo/images/emergencias.jpg" alt="">
+                            </div>
+                            <div class="img-slide">
+                                <img src="https://ssupotosi.com.bo/images/medicina_gral.jpg" alt="">
+                            </div>
+                            <div class="img-slide">
+                                <img src="https://ssupotosi.com.bo/images/ecografia.jpg" alt="">
+                            </div>
+                            <div class="img-slide">
+                                <img src="https://ssupotosi.com.bo/images/laboratorio.jpg" alt="">
+                            </div>
                             <div class="img-slide">
                                 <img src="https://ssupotosi.com.bo/images/laboratorio.jpg" alt="">
                             </div>
@@ -179,7 +251,69 @@
                                     <p>GESTOR DE CALIDAD</p>
                                 </div>
                             </div>
-
+                            <div class="m-slide">
+                                <div class="im">
+                                    <img src="https://ssupotosi.com.bo/images/medicos/elena_bravo.jpg" alt="">
+                                </div>
+                                <div class="description">
+                                    <h5>ELENA BRAVO</h5>
+                                    <p>MÉDICO GENERAL EST.</p>
+                                </div>
+                            </div>
+                            <div class="m-slide">
+                                <div class="im">
+                                    <img src="https://ssupotosi.com.bo/images/medicos/grinez_rocio.jpg" alt="">
+                                </div>
+                                <div class="description">
+                                    <h5>GRINEZ ROCIO</h5>
+                                    <p>MÉDICO CENTINELA</p>
+                                </div>
+                            </div>
+                            <div class="m-slide">
+                                <div class="im">
+                                    <img src="https://ssupotosi.com.bo/images/medicos/melva_magne.jpg" alt="">
+                                </div>
+                                <div class="description">
+                                    <h5>MELVA MAGNE</h5>
+                                    <p>REGENTE DE FARMACIA</p>
+                                </div>
+                            </div>
+                            <div class="m-slide-v">
+                                <div class="im">
+                                    <img src="https://ssupotosi.com.bo/images/medicos/alfredo_acha.jpeg" alt="">
+                                </div>
+                                <div class="description">
+                                    <h5>ALFREDO ACHA</h5>
+                                    <p>MÉDICO GENERAL</p>
+                                </div>
+                            </div>
+                            <div class="m-slide-v">
+                                <div class="im">
+                                    <img src="https://ssupotosi.com.bo/images/medicos/erick_lennis.png" alt="">
+                                </div>
+                                <div class="description">
+                                    <h5>ERICK LENNIS</h5>
+                                    <p>MÉDICO PEDIATRA</p>
+                                </div>
+                            </div>
+                            <div class="m-slide-v">
+                                <div class="im">
+                                    <img src="https://ssupotosi.com.bo/images/medicos/oscar_lafuente.png" alt="">
+                                </div>
+                                <div class="description">
+                                    <h5>OSCAR LA FUENTE</h5>
+                                    <p>MÉDICO GENERAL</p>
+                                </div>
+                            </div>
+                            <div class="m-slide-v">
+                                <div class="im">
+                                    <img src="https://ssupotosi.com.bo/images/medicos/jerson_arancibia.jpg" alt="">
+                                </div>
+                                <div class="description">
+                                    <h5>GERSON ARANCIBIA</h5>
+                                    <p>GESTOR DE CALIDAD</p>
+                                </div>
+                            </div>
                            
                         </div>
                     </div>
@@ -256,7 +390,70 @@
                     <h3><b>PEDIATRÍA</b></h3>
                 </div>
             </div>
-           
+            <div class="a-slide">
+                <div class="am">
+                    <img src="https://ssupotosi.com.bo/images/emergencias.jpg" alt="">
+                </div>
+                <div class="description">
+                    <h3><b>EMERGENCIAS</b></h3>
+                </div>
+            </div>
+            <div class="a-slide">
+                <div class="am">
+                    <img src="https://ssupotosi.com.bo/images/medicina_gral.jpg" alt="">
+                </div>
+                <div class="description">
+                    <h3><b>CONSULTA GENERAL</b></h3>
+                </div>
+            </div>
+            <div class="a-slide">
+                <div class="am">
+                    <img src="https://ssupotosi.com.bo/images/ecografia.jpg" alt="">
+                </div>
+                <div class="description">
+                    <h3><b>ECOGRAFÍA</b></h3>
+                </div>
+            </div>
+            <div class="a-slide">
+                <div class="am">
+                    <img src="https://ssupotosi.com.bo/images/laboratorio.jpg" alt="">
+                </div>
+                <div class="description">
+                    <h3><b>LABORATORIO</b></h3>
+                </div>
+            </div>
+            <div class="a-slide">
+                <div class="am">
+                    <img src="https://ssupotosi.com.bo/images/farmacia.jpg" alt="">
+                </div>
+                <div class="description">
+                    <h3><b>FARMACIA</b></h3>
+                </div>
+            </div>
+            <div class="a-slide">
+                <div class="am">
+                    <img src="https://www.tuotromedico.com/include/images/fotosContenidos/Radiografia.webp" alt="">
+                </div>
+                <div class="description">
+                    <h3><b>RAGIOGRAFÍA</b></h3>
+                </div>
+            </div>
+            <div class="a-slide">
+                <div class="am">
+                    <img src="https://ssupotosi.com.bo/images/laboratorio.jpg" alt="">
+                </div>
+                <div class="description">
+                    <h3><b>CUESTIONARIO COVID 19</b></h3>
+                </div>
+            </div>
+            <div class="a-slide">
+                <div class="am">
+                    <img src="https://ssupotosi.com.bo/images/pediatria.jpg" alt="">
+                </div>
+                <div class="description">
+                    <h3><b>PEDIATRÍA</b></h3>
+                </div>
+            </div>
         </div>
     </div>
 </div> 
