--- a/seguroUniversitario/src/app/main/main.component.html
+++ b/seguroUniversitario/src/app/main/main.component.html
@@ -116,7 +116,7 @@
                     <div class="heading">
                         <h2>Brindando los mejores servicios</h2>
                     </div>
-                    <div class="row">
+                    <div class="row-s">
                             <h5 class="text-justify">Servicio de ambulancia las 24 Hrs. de la semana<br>
                                 Les brindamos los mejores servicios y médicos para su confort con calidad y calidez.<br>
                                 24/7 la formula perfecta al servicio de nuestos asegurados y la población en general.<br>
