--- a/seguroUniversitario/src/app/header/header.component.css
+++ b/seguroUniversitario/src/app/header/header.component.css
@@ -1,33 +1,27 @@
+#head{
+    height:auto;
+}
 #top-header {
     margin: 0;
     background-color: #1e245f;
-}
-@media (min-width: 1200px) {
-    .container {
-        width: 1170px;
-    }
-}
-@media (min-width: 992px) {
-    .container {
-        width: 970px;
-    }
-}
-@media (min-width: 768px) {
-    .container {
-        width: 750px;
-    }
 }
 .container {
     margin-right: auto;
     margin-left: auto;
     width: 100%;
-    place-items: center;
     
+}
+#header{
+    margin-left: 10%;
+}
+.menu-toggle{
+    display: none;
 }
 .header-links{
     float: left;
     list-style:none;
     margin-right: 20px;
+    margin-left: 10%;
 }
 .header-links li{
     display: inline-block;
@@ -77,4 +71,20 @@ a{
 .dropdown-toggle:hover{
     color: #D10024;
     border-bottom: 2px solid #D10024;;
+}
+@media(max-width: 1000px){
+    .row{
+        padding: 0;
+        margin: 0;
+        display: grid;
+        place-items: center;
+        gap: 0;
+    }
+    .menu-toggle{
+        display: block;
+        text-align: center;
+    }
+    #navigation{
+        display: none;
+    }
 }
